<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentDatXe">

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/DatXe_TopBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DatXe_top"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="2dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/current_position"
                android:id="@+id/DatXe_etCurrentPos"
                android:layout_weight="9"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/DatXe_btnSetStartingPoint"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DatXe_top"
            android:id="@+id/DatXe_bott"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:background="@drawable/border"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/destinate_position"
                android:id="@+id/DatXe_etDestPos"
                android:layout_weight="9"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/DatXe_btnSetDestinationPoint"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_above="@id/DatXe_details"
        android:layout_below="@id/DatXe_TopBar">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DatXe_mapPlacer"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DatXe_details"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/km_count"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/DatXe_tvKilometer"
                    android:text="@string/default_value"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DatXe_tvPrice"
                    android:textSize="15sp"
                    android:text="@string/default_value"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DatXe_btnPlaceOrder"
            android:backgroundTint="@color/red"
            android:text="@string/booking"/>
    </LinearLayout>
</RelativeLayout>