<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    >


    <EditText
        android:id="@+id/txtTaikhoanDangNhap"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="298dp"
        android:layout_marginRight="8dp"
        android:background="#FBF9F9"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/tai_khoan"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/txtMatKhauDangNhap"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTaikhoanDangNhap"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="8dp"
        android:background="#FBF9F9"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/mat_khau"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/txtMatKhauDangNhap"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:backgroundTint="@color/red"
        android:text="@string/dang_nhap"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_below="@+id/btnDangNhap"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:backgroundTint="@color/red"
        android:text="@string/dang_ky"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/background" />

</RelativeLayout>