<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnChinhSua"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/edit" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/tvHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nguyễn Văn A"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tvDiaChi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tvDiaChiNha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvDiaChi"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tvSoDienThoai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/tVSDT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvSoDienThoai"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tvLoaiKhach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tvLoaiKH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvLoaiKhach"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>